--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -203,6 +203,7 @@
 			android:configChanges="orientation|screenSize|keyboardHidden|smallestScreenSize|screenLayout"
 			android:hardwareAccelerated="true"
 			android:supportsPictureInPicture="true"
+			android:theme="@style/AppTheme.DebugActivity"
 			android:windowSoftInputMode="stateHidden"
 			android:exported="true">
 			<intent-filter>
