--- a/.github/workflows/auto-lebel.yml
+++ b/.github/workflows/auto-lebel.yml
@@ -1,4 +1,5 @@
 name: AI Labeler
+
 on:
   issues:
     types: [opened, edited]
@@ -8,11 +9,19 @@ on:
 jobs:
   label-issue:
     runs-on: ubuntu-latest
-    # This step runs for issues and pull requests
+    # This step runs for issues and pull requests from the main repository
     if: github.event_name == 'issues' || github.event.pull_request.head.repo.full_name == github.repository
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install Google GenAI dependency
+        run: npm install @google/genai
 
       - name: Analyze and Label with Gemini
         uses: actions/github-script@v7
@@ -20,6 +29,7 @@ jobs:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         with:
           script: |
+            // The module is now available because we installed it
             const { GoogleGenAI } = require("@google/genai");
             const ai = new GoogleGenAI({ apiKey: process.env.GEMINI_API_KEY });
 
@@ -62,13 +72,6 @@ jobs:
               const response = await ai.models.generateContent({
                 model: "gemini-1.5-flash",
                 contents: prompt,
-                // Optional: Add labels for tracking this API call in your billing
-                config: {
-                  labels: {
-                    "source": "github-actions-labeler",
-                    "workflow": "ai-labeler"
-                  }
-                }
               });
 
               const labelString = response.text.trim();
@@ -79,7 +82,6 @@ jobs:
 
               // Apply the labels using the GitHub API
               if (labelsToAdd.length > 0) {
-                const issueType = context.payload.issue ? 'issues' : 'pulls';
                 await github.rest.issues.addLabels({
                   owner: context.repo.owner,
                   repo: context.repo.repo,
@@ -90,4 +92,8 @@ jobs:
               }
             } catch (error) {
               console.error('Error occurred:', error);
+              // This helps with debugging if the AI returns unexpected output
+              if (error.response) {
+                console.error('API Response error details:', error.response);
+              }
             }
