--- a/.github/workflows/auto-lebel.yml
+++ b/.github/workflows/auto-lebel.yml
@@ -70,7 +70,7 @@ jobs:
 
             try {
               const response = await ai.models.generateContent({
-                model: "gemini-1.5-flash",
+                model: "gemini-2.5-pro",
                 contents: prompt,
               });
 
