--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
-    id 'com.google.firebase.crashlytics'
-    //id 'com.google.firebase.firebase-perf'
+    id("org.jetbrains.kotlin.plugin.serialization") version "1.8.10"
 }
 
 def keystoreProperties = new Properties()
@@ -111,16 +110,27 @@ android {
 }
 
 dependencies {
+    // Supabase
+    implementation "io.github.jan-tennert.supabase:postgrest-kt:2.5.0"
+    implementation "io.github.jan-tennert.supabase:auth-kt:2.5.0"
+    implementation "io.github.jan-tennert.supabase:storage-kt:2.5.0"
+    implementation "io.github.jan-tennert.supabase:realtime-kt:2.5.0"
+    implementation "io.ktor:ktor-client-android:2.3.11"
+    implementation "io.ktor:ktor-client-core:2.3.11"
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3'
+
+
     // Import the Firebase BoM (downgraded to avoid gRPC conflict)
-    implementation(platform("com.google.firebase:firebase-bom:33.16.0"))
+    //implementation(platform("com.google.firebase:firebase-bom:33.16.0"))
 
     // When using the BoM, don't specify versions in Firebase dependencies
     // Re-adding -ktx suffixes as they are included in this BoM version
-    implementation 'com.google.firebase:firebase-auth-ktx'
-    implementation 'com.google.firebase:firebase-database-ktx'
-    implementation 'com.google.firebase:firebase-perf-ktx'
-    implementation 'com.google.firebase:firebase-crashlytics-ktx'
-    implementation 'com.google.firebase:firebase-analytics-ktx'
+    //implementation 'com.google.firebase:firebase-auth-ktx'
+    //implementation 'com.google.firebase:firebase-database-ktx'
+    //implementation 'com.google.firebase:firebase-storage-ktx'
+    //implementation 'com.google.firebase:firebase-perf-ktx'
+    //implementation 'com.google.firebase:firebase-crashlytics-ktx'
+    //implementation 'com.google.firebase:firebase-analytics-ktx'
 
     // AndroidX Core & UI Components
     implementation 'androidx.core:core-ktx:1.17.0-rc01'
@@ -205,8 +215,3 @@ dependencies {
     // Testing
 }
 
-// Apply Google Services plugin only if credentials file exists
-def googleServicesFile = file('google-services.json')
-if (googleServicesFile.exists()) {
-    apply plugin: 'com.google.gms.google-services'
-}
