refactor(firebase): migrate from Firebase to Supabase
remove Firebase dependencies and initialize Supabase integration
update authentication, database, and notification services
add TODOs for remaining Supabase migration tasks
update CI workflows and documentation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
-    id 'com.google.firebase.crashlytics'
-    //id 'com.google.firebase.firebase-perf'
+
 }
 
 def keystoreProperties = new Properties()
@@ -111,16 +110,11 @@ android {
 }
 
 dependencies {
-    // Import the Firebase BoM (downgraded to avoid gRPC conflict)
-    implementation(platform("com.google.firebase:firebase-bom:33.16.0"))
-
-    // When using the BoM, don't specify versions in Firebase dependencies
-    // Re-adding -ktx suffixes as they are included in this BoM version
-    implementation 'com.google.firebase:firebase-auth-ktx'
-    implementation 'com.google.firebase:firebase-database-ktx'
-    implementation 'com.google.firebase:firebase-perf-ktx'
-    implementation 'com.google.firebase:firebase-crashlytics-ktx'
-    implementation 'com.google.firebase:firebase-analytics-ktx'
+    // TODO(supabase): Add Supabase dependencies for Auth, Realtime, and PostgREST.
+    // See: https://supabase.com/docs/reference/kotlin/installing
+    implementation("io.github.jan-tennert.supabase:postgrest-kt:2.0.0")
+    implementation("io.github.jan-tennert.supabase:gotrue-kt:2.0.0")
+    implementation("io.github.jan-tennert.supabase:realtime-kt:2.0.0")
 
     // AndroidX Core & UI Components
     implementation 'androidx.core:core-ktx:1.17.0-rc01'
@@ -205,8 +199,4 @@ dependencies {
     // Testing
 }
 
-// Apply Google Services plugin only if credentials file exists
-def googleServicesFile = file('google-services.json')
-if (googleServicesFile.exists()) {
-    apply plugin: 'com.google.gms.google-services'
-}
+// TODO(supabase): Delete the google-services.json file after migrating all Firebase services.
