--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,11 +110,11 @@ android {
 }
 
 dependencies {
-    // TODO(supabase): Add Supabase dependencies for Auth, Realtime, and PostgREST.
-    // See: https://supabase.com/docs/reference/kotlin/installing
     implementation("io.github.jan-tennert.supabase:postgrest-kt:2.0.0")
     implementation("io.github.jan-tennert.supabase:gotrue-kt:2.0.0")
     implementation("io.github.jan-tennert.supabase:realtime-kt:2.0.0")
+    implementation("io.github.jan-tennert.supabase:supabase-kt:2.0.0")
+    implementation("io.github.jan-tennert.supabase:storage-kt:2.0.0")
 
     // AndroidX Core & UI Components
     implementation 'androidx.core:core-ktx:1.17.0-rc01'
@@ -197,6 +197,13 @@ dependencies {
     implementation 'androidx.media3:media3-ui:1.3.1'
 
     // Testing
+    implementation 'androidx.test.ext:junit:1.1.5'
+    implementation 'androidx.test.espresso:espresso-core:3.5.1'
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:3.12.4'
+    testImplementation 'org.mockito.kotlin:mockito-kotlin:3.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
 
 // TODO(supabase): Delete the google-services.json file after migrating all Firebase services.
