--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,7 @@ org.gradle.daemon=true
 # Kotlin
 kotlin.code.style=official
 kapt.include.compile.classpath=false
+
+# Supabase Configuration (replace with your actual values)
+SUPABASE_URL=https://your-project-ref.supabase.co
+SUPABASE_ANON_KEY=your-anon-key-here
