--- a/gradle.properties
+++ b/gradle.properties
@@ -15,5 +15,5 @@ kotlin.code.style=official
 kapt.include.compile.classpath=false
 
 # Supabase Configuration (replace with your actual values)
-SUPABASE_URL=https://your-project-ref.supabase.co
-SUPABASE_ANON_KEY=your-anon-key-here
+SUPABASE_URL=https://placeholder.supabase.co
+SUPABASE_ANON_KEY=placeholder-anon-key
