ci(github-actions): Add Supabase environment variables to Android workflow
- Update Android workflow to include Supabase URL and Anon Key as environment variables
- Modify build.gradle to support environment variable configuration for Supabase credentials
- Add Supabase server configuration to MCP settings JSON
- Create package-lock.json for project dependency management
- Ensure secure handling of sensitive credentials during build process

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -70,6 +70,8 @@ jobs:
       - name: Build Release APK
         env:
           SKETCHUB_API_KEY: ${{ secrets.SKETCHUB_API_KEY }}
+          SUPABASE_URL: ${{ secrets.SUPABASE_SYNAPSE_URL }}
+          SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_SYNAPSE_ANON_KEY }}
         run: gradle assembleRelease
 
       - name: Set short SHA
