feat(auth): Implement dedicated EmailVerificationActivity for enhanced verification flow
- Create new EmailVerificationActivity for focused email verification process
- Add EmailVerificationActivity to AndroidManifest.xml with appropriate configuration
- Update AuthActivity to navigate to EmailVerificationActivity when email verification is required
- Modify authentication flow to handle email verification more explicitly
- Add toast messages to provide clear user feedback during verification process
- Improve user experience by separating email verification from main authentication UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -209,6 +209,13 @@
 			android:supportsPictureInPicture="true"
 			android:windowSoftInputMode="stateHidden" />
 		<activity
+			android:name=".EmailVerificationActivity"
+			android:configChanges="orientation|screenSize|keyboardHidden|smallestScreenSize|screenLayout"
+			android:hardwareAccelerated="true"
+			android:supportsPictureInPicture="true"
+			android:screenOrientation="portrait"
+			android:windowSoftInputMode="stateHidden" />
+		<activity
 			android:name=".CompleteProfileActivity"
 			android:configChanges="orientation|screenSize|keyboardHidden|smallestScreenSize|screenLayout"
 			android:hardwareAccelerated="true"
