--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,19 @@ kapt.include.compile.classpath=false
 # Supabase Configuration (replace with your actual values)
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_ANON_KEY=your-anon-key-here
+
+# Authentication Configuration
+# Set to false to disable email verification in development
+auth.require.email.verification=false
+# Set to true to enable debug logging
+auth.enable.debug.logging=true
+# Set to true to enable development mode
+auth.development.mode=true
+# Resend verification email cooldown in seconds
+auth.resend.cooldown.seconds=30
+# Maximum resend attempts
+auth.max.resend.attempts=5
+# Auto retry attempts for network errors
+auth.auto.retry.attempts=3
+# Retry delay in milliseconds
+auth.retry.delay.ms=1000
