--- a/app/build.gradle
+++ b/app/build.gradle
@@ -185,8 +185,8 @@ dependencies {
     implementation 'androidx.paging:paging-runtime-ktx:3.3.6'
     implementation 'androidx.preference:preference-ktx:1.2.1'
 
-    // Google Play services
-    implementation 'com.google.android.gms:play-services-auth:21.4.0'
+    // Google Play services - Removed as not needed with Supabase
+    // implementation 'com.google.android.gms:play-services-auth:21.4.0'
 
     // Image Loading
     implementation 'com.github.bumptech.glide:glide:5.0.0-rc01'
