--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,6 +20,7 @@ jobs:
   notifyTelegram:
     name: Notify Telegram
     runs-on: ${{ vars.IS_USING_HOSTED_RUNNERS == 'true' && 'self-hosted' || 'ubuntu-latest' }}
+    if: false  # Skipped - notification disabled
     steps:
       - uses: actions/checkout@v4
 
@@ -55,12 +56,12 @@ jobs:
           java-version: 17
           distribution: temurin
 
-      - name: Create google-services.json from secret
-        run: |
-          mkdir -p app/src/release
-          echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > app/src/release/google-services.json
-          # Verify the file was created properly
-          ls -la app/src/release/
+      # - name: Create google-services.json from secret
+      #   run: |
+      #     mkdir -p app/src/release
+      #     echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > app/src/release/google-services.json
+      #     # Verify the file was created properly
+      #     ls -la app/src/release/
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
