--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,7 @@ android {
             buildConfigField "String", "SUPABASE_SYNAPSE_S3_ENDPOINT_REGION", "\"${System.getenv('SUPABASE_SYNAPSE_S3_ENDPOINT_REGION') ?: project.findProperty('SUPABASE_SYNAPSE_S3_ENDPOINT_REGION') ?: ''}\""
             buildConfigField "String", "SUPABASE_SYNAPSE_S3_ACCESS_KEY_ID", "\"${System.getenv('SUPABASE_SYNAPSE_S3_ACCESS_KEY_ID') ?: project.findProperty('SUPABASE_SYNAPSE_S3_ACCESS_KEY_ID') ?: ''}\""
             buildConfigField "String", "SUPABASE_SYNAPSE_S3_ACCESS_KEY", "\"${System.getenv('SUPABASE_SYNAPSE_S3_ACCESS_KEY') ?: project.findProperty('SUPABASE_SYNAPSE_S3_ACCESS_KEY') ?: ''}\""
+            buildConfigField "String", "GEMINI_API_KEY", "\"${System.getenv('GEMINI_API_KEY') ?: project.findProperty('GEMINI_API_KEY') ?: ''}\""
             
             // Authentication configuration for production
             buildConfigField "boolean", "AUTH_REQUIRE_EMAIL_VERIFICATION", "${project.findProperty('auth.require.email.verification') ?: 'true'}"
@@ -104,6 +105,7 @@ android {
             buildConfigField "String", "SUPABASE_SYNAPSE_S3_ENDPOINT_REGION", "\"${System.getenv('SUPABASE_SYNAPSE_S3_ENDPOINT_REGION') ?: project.findProperty('SUPABASE_SYNAPSE_S3_ENDPOINT_REGION') ?: ''}\""
             buildConfigField "String", "SUPABASE_SYNAPSE_S3_ACCESS_KEY_ID", "\"${System.getenv('SUPABASE_SYNAPSE_S3_ACCESS_KEY_ID') ?: project.findProperty('SUPABASE_SYNAPSE_S3_ACCESS_KEY_ID') ?: ''}\""
             buildConfigField "String", "SUPABASE_SYNAPSE_S3_ACCESS_KEY", "\"${System.getenv('SUPABASE_SYNAPSE_S3_ACCESS_KEY') ?: project.findProperty('SUPABASE_SYNAPSE_S3_ACCESS_KEY') ?: ''}\""
+            buildConfigField "String", "GEMINI_API_KEY", "\"${System.getenv('GEMINI_API_KEY') ?: project.findProperty('GEMINI_API_KEY') ?: ''}\""
             
             // Authentication configuration for development
             buildConfigField "boolean", "AUTH_REQUIRE_EMAIL_VERIFICATION", "${project.findProperty('auth.require.email.verification') ?: 'false'}"
