--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,9 @@ kapt.include.compile.classpath=false
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_ANON_KEY=your-anon-key-here
 
+# Gemini AI Configuration
+GEMINI_API_KEY=your-gemini-api-key-here
+
 # Authentication Configuration
 # Set to false to disable email verification in development
 auth.require.email.verification=false
