feat(chat): Implement typing indicators and read receipts infrastructure
- Add comprehensive typing indicators with animated three-dot view
- Implement read receipt tracking and state management
- Create custom TypingAnimationView widget for animated typing indicators
- Update ChatViewModel to handle typing and read receipt events
- Add new integration tests for typing indicators and read receipts
- Modify chat bubble layouts to support read receipt icons
- Introduce database optimization and maintenance services
- Add connection status and typing indicator UI components
- Update build configuration and manifest for new features
Enhances real-time communication experience by providing visual feedback for user interactions and message delivery states. config

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -186,6 +186,9 @@ dependencies {
     implementation 'androidx.work:work-runtime-ktx:2.10.3'
     implementation 'androidx.paging:paging-runtime-ktx:3.3.6'
     implementation 'androidx.preference:preference-ktx:1.2.1'
+    
+    // DataStore for preferences
+    implementation 'androidx.datastore:datastore-preferences:1.1.1'
 
     // Google Play services - Removed as not needed with Supabase
     // implementation 'com.google.android.gms:play-services-auth:21.4.0'
@@ -240,6 +243,19 @@ dependencies {
     implementation 'androidx.media3:media3-ui:1.3.1'
 
     // Testing
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.10.2'
+    testImplementation 'org.mockito:mockito-core:5.8.0'
+    testImplementation 'org.mockito.kotlin:mockito-kotlin:5.2.1'
+    testImplementation 'androidx.arch.core:core-testing:2.2.0'
+    
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
+    androidTestImplementation 'androidx.test:runner:1.5.2'
+    androidTestImplementation 'androidx.test:rules:1.5.0'
+    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.10.2'
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
 }
 
 // Supabase configuration is handled through BuildConfig
