feat(media): Implement comprehensive media attachment infrastructure
- Add MediaDownloadManager for efficient media download handling
- Add MediaUploadManager to support media upload orchestration
- Implement ImageCompressor for advanced image optimization
- Create ThumbnailGenerator for generating media preview thumbnails
- Add MediaCache with LRU eviction and periodic cleanup strategies
- Update Supabase client configuration with OkHttp engine support
- Add new model classes for media metadata and upload tracking
- Enhance build configuration with additional Ktor and Supabase dependencies
- Mark media attachment infrastructure tasks as completed in specification document
Resolves media attachment requirements for enhanced file handling, caching, and upload/download management across the application.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -151,6 +151,7 @@ dependencies {
     implementation("io.github.jan-tennert.supabase:realtime-kt")
     implementation("io.github.jan-tennert.supabase:storage-kt")
     implementation("io.ktor:ktor-client-android:2.3.12")
+    implementation("io.ktor:ktor-client-okhttp:2.3.12")
     
     // Serialization for Supabase
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3")
