--- a/app/build.gradle
+++ b/app/build.gradle
@@ -131,6 +131,12 @@ android {
         viewBinding = true
         buildConfig = true
     }
+    
+    testOptions {
+        unitTests.all {
+            useJUnitPlatform()
+        }
+    }
 
     lintOptions {
         abortOnError = false
@@ -252,6 +258,11 @@ dependencies {
     testImplementation 'androidx.arch.core:core-testing:2.2.0'
     testImplementation 'org.robolectric:robolectric:4.11.1'
     testImplementation 'androidx.test:core:1.5.0'
+    
+    // Kotest for property-based testing
+    testImplementation 'io.kotest:kotest-runner-junit5:5.8.0'
+    testImplementation 'io.kotest:kotest-assertions-core:5.8.0'
+    testImplementation 'io.kotest:kotest-property:5.8.0'
     
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
