--- a/app/build.gradle
+++ b/app/build.gradle
@@ -167,11 +167,11 @@ dependencies {
 
 
     // AndroidX Core & UI Components
-    implementation 'androidx.core:core-ktx:1.17.0-rc01'
+    implementation 'androidx.core:core-ktx:1.17.0'
     implementation 'androidx.appcompat:appcompat:1.7.1'
     implementation 'androidx.activity:activity-ktx:1.12.0-alpha05'
     implementation 'androidx.fragment:fragment-ktx:1.8.8'
-    implementation 'com.google.android.material:material:1.14.0-alpha06'
+    implementation 'com.google.android.material:material:1.14.0-alpha07'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'androidx.multidex:multidex:2.0.1'
 
