fix: Update PostCommentsBottomSheetDialogStyle to use Material3 theme
Changed parent from Theme.AppCompat.Light.Dialog to Theme.Material3.Light.Dialog
to fix MaterialButton inflation crash requiring MaterialComponents theme

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -148,7 +148,7 @@
 			android:configChanges="orientation|screenSize|keyboardHidden|smallestScreenSize|screenLayout"
 			android:hardwareAccelerated="true"
 			android:supportsPictureInPicture="true"
-			android:theme="@style/Theme.AppCompat.NoActionBar"
+			android:theme="@style/AppTheme.FullScreen"
 			android:screenOrientation="portrait" />
 		<activity
 			android:name=".CreatePostActivity"
