feat: Add SettingsActivity with Material 3 design
- Create SettingsActivity.kt with ViewBinding (no findViewById)
- Add activity_settings.xml with CoordinatorLayout and MaterialToolbar
- Add reusable item_setting_row.xml component
- Add navigation to ProfileEditActivity, ChatPrivacySettingsActivity
- Add system notification settings navigation
- Add logout functionality using AuthRepository
- Add required drawable icons (chevron_right, notifications, logout)
- Register activity in AndroidManifest.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -217,6 +217,13 @@
 			android:screenOrientation="portrait"
 			android:windowSoftInputMode="stateHidden" />
 		<activity
+			android:name=".SettingsActivity"
+			android:configChanges="orientation|screenSize|keyboardHidden|smallestScreenSize|screenLayout"
+			android:hardwareAccelerated="true"
+			android:supportsPictureInPicture="true"
+			android:screenOrientation="portrait"
+			android:windowSoftInputMode="stateHidden" />
+		<activity
 			android:name=".InboxActivity"
 			android:configChanges="orientation|screenSize|keyboardHidden|smallestScreenSize|screenLayout"
 			android:hardwareAccelerated="true"
