fix: Update Gemini.kt to use BuildConfig.GEMINI_API_KEY
- Remove dependency on R.raw.gemini_api resource file
- Load API key from BuildConfig instead of raw JSON file
- Remove unused imports (coroutines, BufferedReader, etc.)
- Simplify API key loading logic

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,14 @@ keystore.properties
 .env
 .kiro/settings/mcp.json
 
+# Sensitive configuration files
+android/gradle.properties
+android/app/src/main/res/raw/gemini_api.json
+web/src/firebase.config.ts
+web/.env
+web/.env.local
+web/.env.production
+
 # Build artifacts
 build/
 app/build/
