--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -51,6 +51,7 @@ jobs:
           SUPABASE_SYNAPSE_S3_ENDPOINT_REGION: ${{ secrets.SUPABASE_SYNAPSE_S3_ENDPOINT_REGION }}
           SUPABASE_SYNAPSE_S3_ACCESS_KEY_ID: ${{ secrets.SUPABASE_SYNAPSE_S3_ACCESS_KEY_ID }}
           SUPABASE_SYNAPSE_S3_ACCESS_KEY: ${{ secrets.SUPABASE_SYNAPSE_S3_ACCESS_KEY }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: cd android && gradle assembleRelease
 
       - name: Set short SHA
