--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -245,6 +245,7 @@ dependencies {
     implementation 'androidx.collection:collection-jvm:1.5.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:2.2.0"
     implementation 'androidx.browser:browser:1.9.0'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
     implementation 'org.jsoup:jsoup:1.21.1'
 
     // Markdown (Markwon + GFM)
