--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -69,7 +69,7 @@
 			android:name=".PostDetailActivity"
 			android:configChanges="orientation|screenSize|keyboardHidden"
 			android:screenOrientation="portrait"
-			android:windowSoftInputMode="adjustResize"
+			android:windowSoftInputMode="adjustPan"
 			android:parentActivityName=".HomeActivity"
 			android:exported="true">
 			<intent-filter>
