--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -209,7 +209,7 @@ dependencies {
     implementation 'androidx.preference:preference-ktx:1.2.1'
     
     // Room Database
-    def room_version = "2.6.1"
+    def room_version = "2.7.0-alpha11"
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
