--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
+    id 'com.google.devtools.ksp'
     id 'org.jetbrains.kotlin.plugin.serialization'
     id 'org.jetbrains.kotlin.plugin.compose'
 }
@@ -222,7 +222,7 @@ dependencies {
 
     // Image Loading
     implementation 'com.github.bumptech.glide:glide:5.0.0-rc01'
-    kapt 'com.github.bumptech.glide:compiler:5.0.0-rc01'
+    ksp 'com.github.bumptech.glide:ksp:5.0.0-rc01'
 
     // Networking
     implementation 'com.squareup.okhttp3:okhttp:5.1.0'
