--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -212,7 +212,7 @@ dependencies {
     def room_version = "2.6.1"
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    ksp "androidx.room:room-compiler:$room_version"
 
     // DataStore for preferences
     implementation 'androidx.datastore:datastore-preferences:1.1.1'
