--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -151,6 +151,10 @@ android {
     }
 }
 
+ksp {
+    arg("room.schemaLocation", "$projectDir/schemas")
+}
+
 dependencies {
     // Jetpack Compose
     def composeBom = platform('androidx.compose:compose-bom:2024.06.00')
@@ -178,6 +182,12 @@ dependencies {
     
     // Firebase Vertex AI for Gemini
     implementation("com.google.firebase:firebase-vertexai:16.0.2")
+
+    // Room Database
+    def room_version = "2.6.1"
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    ksp "androidx.room:room-compiler:$room_version"
 
 
     // AndroidX Core & UI Components
