Fix KSP configuration syntax for Groovy

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -152,7 +152,7 @@ android {
 }
 
 ksp {
-    arg("room.schemaLocation", "$projectDir/schemas")
+    arg('room.schemaLocation', "$projectDir/schemas")
 }
 
 dependencies {
