--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -151,6 +151,14 @@ android {
     }
 }
 
+configurations.all {
+    resolutionStrategy {
+        force 'org.jetbrains.kotlin:kotlin-stdlib:2.0.21'
+        force 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:2.0.21'
+        force 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:2.0.21'
+    }
+}
+
 ksp {
     arg('room.schemaLocation', "$projectDir/schemas")
 }
