feat(settings): add app settings management and database schema
- Add AppSettingsManager for persistent application settings storage
- Create SettingsViewModel to manage settings UI state and logic
- Add SettingsScreen composable for user settings interface
- Add database schema file for AppDatabase version 1
- Disable data binding in build.gradle to reduce build complexity
- Add MCP configuration file for Supabase integration
- Update PostPagingSource with settings-aware pagination logic
- Update SettingsActivity to integrate new settings screen
- Establish foundation for user preferences and app configuration management

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -130,6 +130,7 @@ android {
 
     buildFeatures {
         viewBinding = true
+        dataBinding = false
         buildConfig = true
         compose = true
     }
