--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -235,6 +235,7 @@ dependencies {
 
     // Image Loading
     implementation 'com.github.bumptech.glide:glide:5.0.0-rc01'
+    implementation 'com.github.bumptech.glide:compose:1.0.0-beta01'
     ksp 'com.github.bumptech.glide:ksp:5.0.0-rc01'
 
     // Networking
