--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -221,6 +221,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-process:2.9.2'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.9.2'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.9.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.9.2'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.9.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.9.3'
     implementation 'androidx.work:work-runtime-ktx:2.10.3'
