refactor(settings): update repository implementation and test configuration
- Update AppearanceViewModel to use SettingsRepositoryImpl singleton pattern instead of direct instantiation
- Update PrivacySecurityViewModel to use SettingsRepositoryImpl singleton pattern instead of direct instantiation
- Restructure build.gradle testOptions configuration for better organization and add Android resources support
- Remove property-based serialization tests (PostDetailSerializationPropertyTest, CommentRepositoryPropertyTest, PostDetailRepositoryPropertyTest, ReactionRepositoryPropertyTest) to streamline test suite
- Improve repository dependency management through singleton pattern for consistent state management

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -136,8 +136,11 @@ android {
     }
     
     testOptions {
-        unitTests.all {
-            useJUnitPlatform()
+        unitTests {
+            all {
+                useJUnitPlatform()
+            }
+            includeAndroidResources = true
         }
     }
 
