--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -173,18 +173,21 @@ ksp {
 
 dependencies {
     // Jetpack Compose
-    def composeBom = platform('androidx.compose:compose-bom:2024.06.00')
+    def composeBom = platform('androidx.compose:compose-bom:2024.12.00')
     implementation composeBom
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.material3:material3'
     implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.activity:activity-compose:1.9.0'
+    implementation 'androidx.activity:activity-compose:1.9.3'
     implementation 'androidx.compose.foundation:foundation'
     implementation 'androidx.compose.animation:animation'
     implementation 'androidx.compose.runtime:runtime-livedata'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+    
+    // Coil for Compose image loading
+    implementation 'io.coil-kt:coil-compose:2.7.0'
     
     // Accompanist for system UI controller
     implementation 'com.google.accompanist:accompanist-systemuicontroller:0.32.0'
