Fix build errors: Add missing dependencies and fix imports
- Add Material Icons Extended for Compose icons
- Add ZXing library for QR code generation
- Fix SupabaseClient import path in ProfileActionRepository
- Fix AccessibilityHelper to use correct View API

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -52,7 +52,7 @@ jobs:
           SUPABASE_SYNAPSE_S3_ACCESS_KEY_ID: ${{ secrets.SUPABASE_SYNAPSE_S3_ACCESS_KEY_ID }}
           SUPABASE_SYNAPSE_S3_ACCESS_KEY: ${{ secrets.SUPABASE_SYNAPSE_S3_ACCESS_KEY }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-        run: cd android && gradle assembleRelease
+        run: cd android && ./gradlew assembleRelease
 
       - name: Set short SHA
         id: set_sha
